source/app/static/assets/css/dark-theme.css
body {
    background: #010409;
}

body .main-header {
    box-shadow: 0px 0px 5px #010409;
}

body .main-panel {
    color: rgba(225, 226, 228, 0.91) !important;
}

body .main-panel {
    color: #d9d6d6 !important;
}

.logo-header[data-background-color="blue"] {
  background: #1f283e  !important;
}

.main-header {
    background: #1f283e;
}

@-webkit-keyframes yellow-fade {
  from {
    background: #f96;
  }
  to {
    background: #010409;
  }
}
@-moz-keyframes yellow-fade {
  from {
    background: #f96;
  }
  to {
    background: #010409;
  }
}
@keyframes yellow-fade {
  from {
    background: #f96;
  }
  to {
    background: #010409;
  }
}

body .card,
body .row-card-no-pd,
body .list-group-item,
body .timeline>li>.timeline-panel {
    background: #202940;
    box-shadow: none;
}

body .card-pricing2 {
    background: #202940 !important;
}

body .row-card-no-pd [class*=col] .card:before {
    background: rgba(181, 181, 181, 0.1) !important;
}

.kanban-item {
    box-shadow: 0 0 0 1px rgba(122, 128, 134, 0.2);
}

body .card .card-header,
body .card .card-footer,
body .card .card-action,
body .accordion .card,
body .card-profile .user-stats [class^="col"],
body .table td,
body .table th,
body .breadcrumbs,
body .separator-dashed,
body .separator-solid,
body .separator-dot,
body .list-group .list-group-item,
body .conversations .messages-form,
body .mail-wrapper .mail-content .inbox-body .email-list .email-list-item,
body .page-with-aside .page-aside,
body .mail-wrapper .mail-content .email-head,
body .mail-wrapper .mail-content .email-sender,
body .main-panel .page-divider {
    border-color: rgba(181, 181, 181, 0.1) !important;
}

.timeline>li>.timeline-even {
    background: rgba(181, 181, 181, 0.1);
}

body .timeline>li>.timeline-panel {
    border-color: rgba(181, 181, 181, 0.1);
}

body .timeline>li>.timeline-panel:before {
    border-left-color: rgba(181, 181, 181, 0.1);
    border-right-color: rgba(181, 181, 181, 0.1);
}

body .timeline>li>.timeline-panel:after {
    border-left-color: #202940;
    border-right-color: #202940;
}

body .page-title,
body .breadcrumbs li a {
    color: rgba(169, 175, 187, 0.82);
}

body .page-category {
    color: #828282;
}

body a {
    color: #9FB2FF;
}

body table.dataTable tbody > tr.selected,
body table.dataTable tbody > tr > .selected {
	background-color: #455471 !important;
}

body .card-title,
body .card-title a,
body .card-title a:hover,
body .card-title a:focus {
    color: #fff;
}

.bg-shadow-gradient {
  background: #1572E8 !important;
  background: -webkit-linear-gradient(legacy-direction(-45deg), #141515, #484848BD) !important;
  background: linear-gradient(-45deg, #141515, #484848BD) !important;
}

body .card-category {
    color: #8b92a9;
}

body .card-default,
body .card-primary,
body .card-secondary,
body .card-info,
body .card-success,
body .card-warning,
body .card-danger {
    color: #fff;
}

body .card-default .card-title,
body .card-default .card-category,
body .card-primary .card-title,
body .card-primary .card-category,
body .card-secondary .card-title,
body .card-secondary .card-category,
body .card-info .card-title,
body .card-info .card-category,
body .card-success .card-title,
body .card-success .card-category,
body .card-warning .card-title,
body .card-warning .card-category,
body .card-danger .card-title,
body .card-danger .card-category {
    color: #fff;
}

body .btn-outline-dark,
body .btn-outline-white,
body .btn-outline-light,
body .nav-pills .nav-link:not(.active) {
    background: rgba(185, 185, 185, 0.18);
    color: #fff;
    border: none;
}

body table.dataTable tr.dtrg-group td {
	background-color: #ffffff21;
}

body .card-pricing .specification-list li {
    border-color: #373d4c;
}

body .input-group-text {
    border-color: #2f374b !important;
    background-color: #1f283e;
    color: #fff;
}

body .input-solid {
    background: #363b4c !important;
    border-color: #363b4c !important;
}

body .list-group-messages .list-group-item-title a,
body .list-group .list-group-item-text {
    color: inherit;
}

body .footer {
    border-top: 1px solid #293247;
    background: #1f283e;
}

body .bg-focus-gradient {
    background: linear-gradient(-180deg, #29292f, #1a1a1a) !important;
}

body .form-control,
body .form-group-default,
body .select2-container--bootstrap .select2-selection {
    background-color: #1a2035 !important;
    color: #fff !important;;
    border-color: #2f374b;
}

body .bootstrap-tagsinput {
    background: transparent;
}

body .selectgroup-button {
    border: 1px solid #2f374b;
}

body .conversations .message-header {
    background: #1a2035;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.07);
}

body .conversations .conversations-content {
    color: #575962;
    border-color: #2e364a;
}

body .mail-wrapper .mail-content .inbox-body .email-list .email-list-item.unread {
    background: #1f283e !important;
}

body .mail-wrapper .mail-content .inbox-body .email-list .email-list-item:hover {
    background: #171e2f !important;
}

body .page-with-aside .page-aside .aside-nav .nav>li:hover,
body .page-with-aside .page-aside .aside-nav .nav>li:focus,
body .page-with-aside .page-aside .aside-nav .nav>li.active {
    background: rgba(0, 0, 0, 0.03);
}

body .page-with-aside .page-aside .aside-nav .nav>li.active>a {
    color: #b9babf !important;
}

body .board {
  color: #f2f2f2;
}

.list-group-item-action {
  color: #f0f0f0;
  text-align: inherit;
}

body .kanban-board {
    background: #2f3953 !important;
}

body .kanban-item {
    background: #1a2035 !important;
}

body .modal-content {
    background: #202940 !important;
}

body .timeline-title,
body .timeline-body {
    color: #eee;
}

body .timeline-inverted {
    color: #eee;
}

body .timeline-inverted .text-dark {
    color: #eee !important;
}

body .timeline-odd {
    background: #202940 !important;
        color: #cac7c7;
}
body .timeline-even {
    background: #24272d !important;
    color: #cac7c7;
}
/* ... */

